<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Добавить заметку</string>
    <string name="add">Добавить</string>
    <string name="what_use">Что использовать?</string>
    <string name="input_note_title">Введите заголовок заметки</string>
    <string name="input_note_text">Введите текст заметки</string>
    <string name="room">room</string>
    <string name="note">Заметки</string>
    <string name="fields_should_be_filled">Поля должны быть заполнены</string>
    <string name="firebase">firebase</string>
    <string name="enter_email">Введите адрес email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="connect_to_firebase_ok">Подключение к Firebase прошло успешно</string>
</resources>