<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.start.StartFragment">

    <TextView
        android:id="@+id/textStart"
        android:text="@string/what_use"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/text_size_large"
        android:layout_margin="@dimen/margin_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRoom"
        android:text="@string/room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStart"
        android:layout_margin="@dimen/margin_large"
        android:layout_width="@dimen/width_button_start"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnFirebase"
        android:text="@string/firebase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRoom"
        android:layout_margin="@dimen/margin_large"
        android:layout_width="@dimen/width_button_start"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLogin"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFirebase"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/inputEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="@dimen/width_input_email"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/inputPassword"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        android:layout_width="@dimen/width_input_email"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        android:layout_width="@dimen/width_button_start"
        android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>